edutrack/edutrack-api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edutrack-api-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: edutrack-api-app
  template:
    metadata:
      labels:
        app: edutrack-api-app
    spec:
      containers:
        - name: edutrack-api-app
          image: 938964965021.dkr.ecr.us-west-1.amazonaws.com/edu-server:v1
          ports:
            - containerPort: 3000
