edutrack/edutrack-api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: edutrack-api-app-service
spec:
  type: LoadBalancer
  selector:
    app: edutrack-api-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 31268
