edutrack/edutrack-api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edutrack-api-app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod-edutrack-api"
spec:
  tls:
  - hosts:
    - edu-test-api.wetasker.com
    - www.edu-test-api.wetasker.com
    secretName: edutrack-api-app-tls
  rules:
  - host: edu-test-api.wetasker.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: edutrack-api-app-service
            port:
              number: 80
  - host: www.edu-test-api.wetasker.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: edutrack-api-app-service
            port:
              number: 80
